# pm-app

./: README.md  SECURITY_MODEL_CN.md  index.html  package-lock.json  package.json  reset_vault.sql  update.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml  website-pages.yml
images/: logo.cdr
public/pdfjs/: viewer.css  viewer.html  viewer.mjs  viewer.mjs.map
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_documents.sql  003_add_vault.sql  004_remove_document_content.sql  005_rename_vault_fields.sql  006_document_types.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: documents.rs  docvault.rs  editor.rs  folder.rs  git.rs  handover.rs  mod.rs  projects.rs  terminal.rs  vault.rs
src-tauri/src/crypto/: encryption.rs  mod.rs
src/components/documents/: DocumentEditor.vue  DocumentList.vue  DocumentPreview.vue  DocumentSplitView.vue  FilePreviewer.vue  FolderTreeItem.vue  ImageViewer.vue  MarkdownToolbar.vue  PdfViewer.vue
src/components/files/: FileTypeStats.vue  LargestFiles.vue
src/components/git/: GitBranchPanel.vue  GitBranchSelect.vue  GitChanges.vue  GitChangesModal.vue  GitCommitDetail.vue  GitCommitList.vue
src/composables/: useConfirm.js  useContextMenu.js  useFileDrop.js  useTauri.js  useTheme.js  useUpdater.js
src/stores/: documents.js  files.js  git.js  index.js  projects.js  settings.js  shortcuts.js  theme.js  vault.js
src/styles/: animations.css  cartoon.css  main.css  themes.css
src/utils/: crypto.js  fileTypes.js
src/views/: DocumentsView.vue  FilesView.vue  GitView.vue  HandoverView.vue  ProjectView.vue  VaultView.vue
website/: download.html  features.html  index.html  open-source.html  styles.css
(+27 files in other folders)
